<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_console_tools</name>
  <version>1.1.1</version>
  <description>Console tools for ROS 2 topics, parameters, and runtime operations.</description>
  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>curses</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>tf2_msgs</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
